<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:id="@+id/drawlay_manual">


<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.mohit.time.manualEntry"
    android:orientation="vertical">

    <include layout="@layout/app_bar"
        android:id="@+id/app_bar_manual"

        />
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:layout_marginBottom="8dp">
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="time"
        android:hint="@string/entry_time_hint"
        android:ems="10"
        android:id="@+id/entry_time"

        android:focusable="true"
        android:focusableInTouchMode="true" />
    </android.support.design.widget.TextInputLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/break1_layout"
        android:weightSum="1">


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="200dp"
            android:layout_marginBottom="8dp"
            android:layout_weight="0.5"
            >
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:hint="@string/break1_start"
                android:id="@+id/b1_start"
                android:layout_below="@id/entry_time"
                android:layout_marginTop="20dp"

                android:focusable="true"
                android:focusableInTouchMode="true" />

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="200dp"
            android:layout_marginBottom="8dp"
            android:layout_weight="0.5"
            android:id="@+id/view">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:hint="@string/break1_stop"
                android:id="@+id/b1_stop"
                android:layout_below="@id/entry_time"
                android:layout_marginTop="20dp"

                android:focusable="true"
                android:focusableInTouchMode="true" />

        </android.support.design.widget.TextInputLayout>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/break2_layout"
        android:layout_below="@id/break1_layout"
        android:weightSum="1">


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginBottom="8dp"
            android:layout_weight="0.5"
            >
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:hint="@string/break2_start"
                android:id="@+id/b2_start"
                android:layout_below="@id/entry_time"
                android:layout_marginTop="20dp"

                android:focusable="true"
                android:focusableInTouchMode="false" />

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginBottom="8dp"
            android:layout_weight="0.5"
            >
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:hint="@string/break2_stop"
                android:id="@+id/b2_stop"
                android:layout_below="@id/entry_time"
                android:layout_marginTop="20dp"
                android:focusable="true"
                android:focusableInTouchMode="true" />

        </android.support.design.widget.TextInputLayout>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/break3_layout"
        android:layout_below="@id/break2_layout"
        android:weightSum="1">


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginBottom="8dp"
            android:layout_weight="0.5"
            >
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:hint="@string/break3_start"
                android:id="@+id/b3_start"
                android:layout_below="@id/entry_time"
                android:layout_marginTop="20dp"

                android:focusable="true"
                android:focusableInTouchMode="true" />

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginBottom="8dp"
            android:layout_weight="0.5"
            >
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:hint="@string/break3_stop"
                android:id="@+id/b3_stop"
                android:layout_below="@id/entry_time"
                android:layout_marginTop="20dp"

                android:focusable="true"
                android:focusableInTouchMode="true" />

        </android.support.design.widget.TextInputLayout>
    </LinearLayout>





    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/edit"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="50dp"
        android:id="@+id/view2">
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="time"
        android:ems="10"
        android:hint="@string/exit_hint"
        android:id="@+id/exit_time"
     android:layout_marginBottom="111dp"
        android:layout_above="@+id/edit"
        android:layout_alignParentStart="true"
        android:focusable="true"
        android:focusableInTouchMode="true" />
    </android.support.design.widget.TextInputLayout>


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_edit"
        android:textColor="@color/primary"
        android:background="@drawable/custom_button"
        android:id="@+id/edit"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/date_manual"
        android:textSize="40sp"
        android:layout_below="@+id/app_bar_manual"
        android:layout_alignParentStart="true"
        android:gravity="center_horizontal" />

</RelativeLayout>

    <android.support.design.widget.NavigationView
        android:layout_width="280dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:id="@+id/draw_manual"
        app:menu="@menu/drawmenu"
        app:headerLayout="@layout/header">


    </android.support.design.widget.NavigationView>




</android.support.v4.widget.DrawerLayout>
